fixed some more and tested the input text style on iPhone

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,5 +1,6 @@
-input:focus {
+  input:focus {
   outline: none;
+  -webkit-appearance: none;
 }
 
 body.happy {
@@ -31,6 +32,7 @@ input[type=reset] {
 .happy input[type=reset] {
   background-color: #ffffff;
   border: 1px solid black;
+  -webkit-appearance: none;
 }
 
 .sad input[type=button],
@@ -38,12 +40,13 @@ input[type=reset] {
 .sad input[type=reset] {
   background-color: #000000;
   border: 1px solid white;
+  -webkit-appearance: none;
 }
 
 input[type=text] {
   padding: 0px 0px;
   margin: 0px 0px 0px 0px;
-  width: 22%;
+  width: 400px;
   height: 50px;
   box-sizing: border-box;
   font-family:Futura;
@@ -54,18 +57,21 @@ input[type=text] {
   letter-spacing: 5px;
   border: none;
   -webkit-appearance: none;
+  -webkit-border-radius:0
 }
 
 .happy input[type=text] {
   background-color: #ffffff;
   color: black;
   border-bottom: 1px solid black;
+  -webkit-appearance: none;
 }
 
 .sad input[type=text] {
   background-color: #000000;
   color: white;
   border-bottom: 1px solid white;
+  -webkit-appearance: none;
 }
 
 .happy input[type=button]:active {
